# tessera

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/verify/: SKILL.md
scripts/: package.sh
src/: app.rs  config.rs  macos.rs  main.rs
