[package]
name = "tessera"
version = "0.1.0"
edition = "2021"
description = "A GPU-accelerated terminal emulator in Rust with native, draggable pane splitting (Ghostty/iTerm2-style)."
license = "MIT"

[workspace]
members = ["vendor/egui_term"]

[dependencies]
eframe = { version = "0.31", default-features = true }
egui = "0.31"
egui_term = { path = "vendor/egui_term" }
anyhow = "1.0"
# Pure-Rust system font lookup, so `font-family` in the config can resolve an
# installed font by name (no native deps).
fontdb = "0.16"

# Reroute the app menu's Quit item (Cmd+Q) into the window-close path so the
# quit confirmation can intercept it. Same versions winit already pulls in.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = [
    "NSApplication",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
    "NSView",
    "NSWindow",
] }
objc2-foundation = { version = "0.2", features = ["NSArray"] }
raw-window-handle = "0.6"

[profile.release]
opt-level = 3
lto = "thin"

# Faster incremental dev builds of the heavy graphics deps.
[profile.dev.package."*"]
opt-level = 2
